--- a/web01/WebContent/javascript/test01.html
+++ b/web01/WebContent/javascript/test01.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title> 출력</title>
 </head>
 <body>
 <script>
-alert("오호라.2.");
+alert("까먹지마ㅏㅏㅏㅏ.");//경고창 출력
+alert("gg");//문자열은 작은따옴표single큰따옴표quotation
+console.log("오홀!");//개발도구창에출렦
 </script>
 </body>
-</html>
+</html>ㄱ
