--- a/web01/WebContent/javascript/test24.html
+++ b/web01/WebContent/javascript/test24.html
@@ -50,7 +50,7 @@ function computeTotal(score){
 function computeAverage(sum, count){	
 	return sum/count;
 }
-
+//////////////////////////////////////////////////////////////////////////////
 
 var s1=["홍길동",100,100,50,80,90];
 var s2=["임꺾쭹",80,90,90,100,100];
@@ -63,7 +63,7 @@ s2[7] = computeAverage(s2[6], 5);
 computeTotal(s3);
 s3[7] = computeAverage(s3[6],5);
 
-boundary();//함수호출: 위에 정의한 명령들ㅇ,ㄹ 재사용
+boundary();//함수호출: 위에 정의한 명령들을 재사용
 displayScore(s1);//파라미터 값으로 s1 배열을 넘긴다.
 //s1 을  아 규 먼 트 라고 한다.! ★★★★★★★
 
