--- a/web01/WebContent/javascript/test49.html
+++ b/web01/WebContent/javascript/test49.html
@@ -18,7 +18,13 @@
 	//strike()=>   <strike>문자열</strike> :취소선 문자열 태그 생성
 	document.write(str1.strike());
 	
-	</script>
+	  //trim() 문자열 양쪽 공백 ㅈ ㅔ ㄱ ㅓ
+	   
+	  var str1= "       okok     nono   ";
+	   console.log("[" + str1.trim() + "]");
+	    console.log("[" + str1.trimLeft() + "]");
+	    console.log("[" + str1.trimRight() + "]");
+	    </script>
 
 </body>
 </html>
