--- a/web01/WebContent/javascript/test01.html
+++ b/web01/WebContent/javascript/test01.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title> 출력</title>
+<title>출력</title>
 </head>
 <body>
 <script>
@@ -11,4 +11,4 @@ alert("gg");//문자열은 작은따옴표single큰따옴표quotation
 console.log("오홀!");//개발도구창에출렦
 </script>
 </body>
-</html>ㄱ
+</html>
