--- a/web01/WebContent/jquery/test01.html
+++ b/web01/WebContent/jquery/test01.html
@@ -12,13 +12,10 @@
 ->사이트별로 같은파일을 중복다운로드해야하는 경우를 줄일 수 있다.
  -->
  
- <!-- 
-  <script src='jquery-1.11.1.js'></script> -->
+ <!-- <script src='jquery-1.11.1.js'></script> -->
   
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<!--    //의미: 현재웹브라우저의 프로토콜을 그대로 쓴다는거  
-   ex http3
- -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<!--  의미: 현재웹브라우저의 프로토콜을 그대로 쓴다는거   ex) http3  -->
  
  <script src='jquery-1.11.1.js'></script>
 
