--- a/web01/WebContent/jquery/test09.html
+++ b/web01/WebContent/jquery/test09.html
@@ -6,13 +6,13 @@
 <script src='jquery-1.11.1.js'></script>
 <script>
 /* 아이디로  태그 찾기
- * CSS 셀렉터 문법:#아이
+ * CSS 셀렉터 문법:#아이디
  */
 
 $(function(){
 	
-	$('#header4').css('background-color','yellow')
-		console.log();
+	$('#header4').css('background-color','yellow');
+	
 	
 });
 
