--- a/web01/WebContent/jquery/test16.html
+++ b/web01/WebContent/jquery/test16.html
@@ -5,7 +5,7 @@
 <title>배열다루기~</title>
 <script src='jquery-1.11.1.js'></script>
 <script>
-//$.each(배열,컬백함수)    VS.  $().each(컬백함)
+//$.each(배열,컬백함수)    VS.  $().each(컬백함수)
 
 
 
