--- a/web01/WebContent/jquery/test18.html
+++ b/web01/WebContent/jquery/test18.html
@@ -23,24 +23,24 @@ $().함수([이름,이름,...]);
 
 <script>
 	$(function() {
-		//  문제: a태그의 콘텐츠를 출력하라 
-		/* console.log($('a').html()); //인덱스 0인 객체의 콘텐츠만 출력한다. */
+//  문제: a태그의 콘텐츠를 출력하라 
+		//console.log($('a').html()); //인덱스 0인 객체의 콘텐츠만 출력한다.
 		//text()함수는 jQuery의 다른 함수와 다르게 모든 객체의 컨텐츠를 하나의 문자열로 합쳐서 출력훼
 		//console.log($('a').text());
-		//  문제:a태그의 href속성 값을 출력하라@
+//  문제:a태그의 href속성 값을 출력하라@
 		//console.log($('a').attr('href'));//인덱스가 0인 객체 href값 리턴
-		//  문제: a태그의 컨텐츠를 '요호라'로 변경하라ㅏ
+//  문제: a태그의 컨텐츠를 '요호라'로 변경하라ㅏ
 		//$('a').html('오호랔ㅋㅋ');  <-값을 설정할때는 모든 객체에 대해 적용된다~
-		//  문제: 짝수번째 모든 tr태그의 배경색을 빨강으로 칠하라~~`
+//  문제: 짝수번째 모든 tr태그의 배경색을 빨강으로 칠하라~~`
 		//$('tr:even').css('background-color','red');
-	/* 	//  문제: tr태그를 찾아서 배경 색을 빨강으로 칠한다.단! 짝수index 객체만 칠한다.~
-		$('tr').css('background-color',
+	//  문제: tr태그를 찾아서 배경 색을 빨강으로 칠한다.단! 짝수index 객체만 칠한다.~
+		/* $('tr').css('background-color',
 				function(index,oldValue){ 
 					if((index%2)==0 ){return 'red';}
 					else {return oldValue;}
 	     	}       );
-		
-	*/
+		 */
+	
 		//값설정  中 함수안에 객체들어가는거 한다잉
 	   //  문제: 인덱스가 홀수인 tr에 대해 배경은 노랑, 폰트는 파랑으로 칠하라
 	   $('tr:odd').css( {
