--- a/web01/WebContent/jquery/test15.html
+++ b/web01/WebContent/jquery/test15.html
@@ -15,26 +15,27 @@
  *   contains(문자열)->해당 문자열을 포함하고 있는 태그들
  */
 $(function(){
-	/* //문제1: 인덱스가 3번째인 tr태그를 찾아 폰트를  빨강색으로 지정하롸
-	$('tr:eq(3)').css('color','red'); */
+/* 	 //문제1: 인덱스가 3번째인 tr태그를 찾아 폰트를  빨강색으로 지정하롸
+	$('tr:eq(3)').css('color','red'); 
 	
-	/* //문제2: 인덱스가 3인 tr태그 이후의 태그들에 대해 배경색을 파란색으로 지정!
-	$('tr:gt(3)').css('background-color','#084017');
-	}); */
+	//문제2: 인덱스가 3인 tr태그 이후의 태그들에 대해 배경색을 파란색으로 지정!
+	$('tr:gt(3)').css('background-color','#084017'); */
 	
-	/* //문제3: 인덱스가 3인 tr태그 이전의 태그들에 대해 배경색을 빨간색으로 지정하라~
+	
+/* 	//문제3: 인덱스가 3인 tr태그 이전의 태그들에 대해 배경색을 빨간색으로 지정하라~
 	$('tr:lt(3)').css('background-color','red');
-  $('tr:gt(0)').remove(); <-다지워ㅓㅓㅓㅓㅓㅓㅓㅓㅓㅓㅓㅓ*/
+  //다 지우렴 
+  $('tr:gt(0)').remove();// <-다지워ㅓㅓㅓㅓㅓㅓㅓㅓㅓㅓㅓㅓ */
  
-  /* //문제4:a태그를 갖는 td태그를 찾아라~
+/*    //문제4:a태그를 갖는 td태그를 찾아라~
     $('td:has(a)').each(function(i,e){
 	  console.log($(e).text());
-  }); */
+     });
   
- /*  //문제5: a태그를 갖지 않는 td태그를 찾아라~
+  //문제5: a태그를 갖지 않는 td태그를 찾아라~
   $('td:not(td:has(a))').each(function(i,e){
 	  console.log(e);	  
-  }); */
+  });  */
   
   /* //문제6:  tr태그에~~~세칸마다 배경을 노란색으로 칠하라~~~
   //위치는 인덱스가 아닌! 서수로 계산한다.... 첫번째 두번째 세번 이렇게 증가!
@@ -42,11 +43,11 @@ $(function(){
   $('tr:nth-child(3n+2)').css('background-color','green');
   $('tr:nth-child(3n)').css('background-color','gray'); */
   
-  //문제7: 배연정3 문자열을 가진 태그를 찾아~~~
+/*   //문제7: 배연정3 문자열을 가진 태그를 찾아~~~
   //활용도- 특정 사이트의 페이지를 뒤져서 키워드와 일치하는 태그를 꺼낼 ㄸㅐ 유용
   $('tr:contains(배연정3)').each(function(i,e){
 	  	  console.log(e);
-	  })
+	  }) */
 });
 </script>
 
